[package]
name = "wobot"
version = "1.1.0"
edition = "2021"
publish = false

[features]
activity = []

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = "0.4.40"
chrono-tz = "0.10.0"
# https://github.com/waltzofpearls/dateparser/issues/53
dateparser = { version = "0.2.1", git = "https://github.com/RiediJohannes/dateparser" }
deser-hjson = "2.2.4"
ics = "0.5"
image = "0.25.5"
imageproc = "0.25.0"
itertools = "0.14.0"
mini-moka = "0.10.3"
parse_duration = "2.1.1"
percent-encoding = "2.3.1"
poise = "0.6.1"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
songbird = { version = "0.5.0", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["mp3"] }
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "tls-rustls", "chrono", "postgres", "sqlx-postgres", "bigdecimal", "migrate", "macros"] }
stitchy-core = "0.1.5"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uwuify = "0.2.2"
